force-app/main/default/objects/Partner_Management_Related_Accounts__c/Partner_Management_Related_Accounts__c.object-meta.xml
<CustomObject>
    <description>Jan 2023 created to meet Partner Mgmt module needs. This object will be used to help staff connect their Partner Mgmt Records to the related Accounts: Business, College, Educational Acct, Dept and Program. Think of this as the initiation relationship (ABC Company to Mechanical Engineering, or Washington High School to the College of Veterinary Medicine).  Easton</description>
    <label>Partner Management Related Accounts</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Partner Management Related Accounts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Management Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>