force-app/main/default/objects/Partner_Management_Related_Accounts__c/fields/Initiating_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Initiating_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>*Important, this is the initiating Program Manager</inlineHelpText>
    <label>Initiating Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Management_Related_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>