force-app/main/default/objects/Partner_Management_Related_Accounts__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Not to replace the main Notes on the Partner Management record itself</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>