force-app/main/default/objects/Partner_Management_Related_Accounts__c/fields/Partner_Management__c.field-meta.xml
<CustomField>
    <fullName>Partner_Management__c</fullName>
    <label>Partner Management</label>
    <referenceTo>Partner_Management__c</referenceTo>
    <relationshipLabel>Partner Management Related Accounts</relationshipLabel>
    <relationshipName>Partner_Management_Related_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>