force-app/main/default/objects/Partner_Management_Related_Accounts__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Management Related Accounts</relationshipLabel>
    <relationshipName>Partner_Management_Related_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>