force-app/main/default/objects/Partner_Management_Related_Accounts__c/fields/Related_Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Related_Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>*Important, this is the owner of the Related Account</inlineHelpText>
    <label>Related Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Management_Related_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>